# mini-rag-assistant

./: .gitignore  README.md  pyproject.toml
data/eval/: sample_eval.jsonl
data/sample_docs/: gmail_oauth.md  india_holidays.md  limitations.md  product_launch.md  security_policy.md  slack_ingestion.md  team_handbook.txt  vector_storage.md  workspace_sync.md
docs/: architecture.md  document-format.md
src/mini_rag_assistant/: __init__.py  __main__.py  answering.py  chunking.py  cli.py  config.py  document_loader.py  evaluation.py  ollama_client.py  pipeline.py  text_utils.py  types.py  vector_store.py
tests/: test_cli_experience.py  test_pipeline.py
