[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-rag-assistant"
version = "0.1.0"
description = "A small, grounded CLI RAG assistant for local document question answering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.6,<2",
]

[project.scripts]
mini-rag = "mini_rag_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

