[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-rag-assistant"
version = "0.2.0"
description = "A grounded local CLI RAG assistant with hybrid retrieval and Ollama-backed answer generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.6,<2",
]

[project.scripts]
mini-rag = "mini_rag_assistant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
